src/assets/css/ui-customizations.css.scss
/* ... */
.modal .modal-dialog {
  transition: none;
  transform: scale(0.8, 0.8);
}

.modal.in .modal-dialog, .modal.out .modal-dialog {
  transform: none !important;
  transition: none;
  transform: scale(1, 1);
}

.loading {
  text-align: center;
}

.item-detail {

  h2 {
    margin-bottom: 20px;
    text-shadow: 1px 1px 1px #000;
  }
}

.items-list {
  background-color: "#f5f5f5";
  margin: 0;
  padding-top: 20px;
  width: 100%;

  .bee-item {
    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.75);
    overflow: hidden;

    .bee-item-text {
      background-color: $whitesmoke;
      overflow: hidden;

      h2 {
        text-overflow: ellipsis;
      }
    }
  }

  a {
    color: $darkgrey;

    &:hover {
      text-decoration: none;
    }
  }

  .grid {

    .bee-item {
      margin-bottom: 32px;

      .bee-item-text {
        height: 72px;

        h2 {
          font-size: 16px;
          padding: 0.5em;
        }

        .bee-item-description {
          display: none;
        }
      }
    }
  }

  .list {

    .bee-item {
      height: 20vw;
      margin-bottom: 1em;

      .bee-item-image-wrapper {
        background-image: url("../images/meta-only-item.jpg");
        display: inline-block;
        height: 20vw;
        width: 20vw;
      }

      .bee-item-text {
        display: inline-block;
        padding: 0.5em;
        vertical-align: top;
      }

    }
  }
}

.btn-details {
  font-size: 16px;
  line-height: 1em;
  margin: 0;
  position: absolute;
  right: 2.5em;
  top: 4.1em;
  z-index: 200;

  i,
  span {
    font-size: 1em;
    line-height: 1em;
    vertical-align: top;
  }

  i {
    margin-right: 4px;
  }

  i[class^="mdi-"] {
    font-size: 1em;
  }
}


.btn-view {
  font-size: 16px;
  line-height: 1em;
  margin: 0;
  z-index: 200;

  i,
  span {
    font-size: 1em;
    line-height: 1em;
    vertical-align: top;
  }

  i {
    margin-right: 4px;
  }

  i[class^="mdi-"] {
    font-size: 1em;
  }
}

.details {
  position: absolute;
  right: 2.8em;
  top: 7em;
  transition-property: width, height;
  transition-duration: .3s;
  overflow-y: scroll;
  background: rgba(244, 244, 244, 0.8);
  border-radius: 4px;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16);
  max-width: 350px;
  z-index: 2;

  .well {
    background: transparent;
    box-shadow: none;
  }

  .metadata-list {

    dt {
      margin-bottom: .3em;
      font-size: 15px;
      color: $darkgrey;
    }

    dd {
      font-size: 13px;
      color: $darkgrey;
    }
  }
}

.about-collection {
  background: rgba(244, 244, 244, 0.6);
  border-radius: 4px;
  color: $about-color;
  margin-bottom: 1em;
  padding: 15px;
}

.modal-lg {
  width: 100%;
}

.modal-dialog {
  position: fixed;
}

#copy, #info {

  .modal-header {
    height: 50px;
  }

  .modal-dialog {
    bottom: 50px;
    position: absolute;
    width: 25% !important;
    left: 0;
    margin: 0;
    height: auto !important;

    button.close {
      padding: 0;
      top: 12px;
    }
  }

  a {
    color: $white;
    text-decoration: underline;
  }

  .modal-content {
    padding: 12px;
  }
}

.overflow-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

/* openseadragon */
.os-toolbar {
  position: absolute !important;
  z-index: 100;

  a {
    color: white;
    margin-right: 8px;

    &:hover {
      text-decoration: none;
      color: white;
    }
  }

  i {
    text-shadow: 1px 1px 1px #000;
  }
}

.openseadragon-container {
  z-index: 1;
}

.navbar-left {
  float: left !important;
}

.bee-browse-exhibit h2 a {
  color: $white;
}

.collection-intro-page,
.collection-show-page,
.items-list-page {
  #banner-wrapper {
    height: 86px;
    position: relative;
    z-index: 1;

    #banner {
      position: fixed;
    }
  }
}

.errorframe {
  margin: 0 auto;
  width: 50vw;
  background: url("../images/frame.png") no-repeat;
  background-size: contain;
  padding:20vh 10vw;
  max-width: 790px;
  max-height: 520px;
}

.dialog-window > div > div:nth-child(2) {
  position: absolute !important;
  top: 0 !important;
  z-index: 1000000;
}

#search-sort {
  hr {
    display: none;
  }
}


.essay-content {
  figure {
    float: left;
    height: auto;
    margin: 0 10px 10px 0;
    width: 15.5em;
  }

  figure a {
    float: left;
    height: auto;
    margin: 0 10px 10px 0;
    width: 15.5em;
  }

  figcaption {
    font-size: 11px;
    font-style: italic;
    margin: .3rem 0;
    text-align: left;
  }

  img {
    height: inherit;
    width: inherit;
  }
}
.manuscript-icon {
  background-image: url('../images/pt.icon.drk.png');
}


@import "collection.css.scss";
@import "showcase.css.scss";
@import "theme-light.css.scss";



/* media-query stylesheet */
@import "_media-medium.css.scss";
@import "_media-small.css.scss";

